src/test/deca/syntax/valid/Objet/ListClasses-Empty2.deca
// Description:
//      Syntaxically correct program with multiple empty class bodies
//
// Result:
//      nothing
//
// History:
//      Created in 17/1/2022

class A {
}

class B {
}

class C {
}
