src/test/deca/syntax/invalid/Objet/ListClasses-ClassInMeth.deca
// Description:
//      Syntaxically incorrect program
//
// Result:
//      Parsing error on line 12
//
// History:
//      Created in 17/1/2022

class A {
    void test() {
        class B {

        }
    }
}

